--- a/VoiceChatServerByUnity/VoiceChatServerByUnity/VoiceChatServerByUnity.vcxproj
+++ b/VoiceChatServerByUnity/VoiceChatServerByUnity/VoiceChatServerByUnity.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="VoiceChatServerByUnity.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="tcpserver.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tcpserver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
