--- a/VoiceChatServerByUnity/VoiceChatServerByUnity/VoiceChatServerByUnity.vcxproj.filters
+++ b/VoiceChatServerByUnity/VoiceChatServerByUnity/VoiceChatServerByUnity.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="VoiceChatServerByUnity.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="tcpserver.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tcpserver.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
