--- a/VoiceChatServerByUnity/VoiceChatServerByUnity/VoiceChatServerByUnity.vcxproj.filters
+++ b/VoiceChatServerByUnity/VoiceChatServerByUnity/VoiceChatServerByUnity.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="tcpserver.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="converter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tcpserver.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="converter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
